# mongo-migrate

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish-prod.yml  python-publish.yml
mongo_migrate/: __init__.py  base_migrate.py  exceptions.py  migration_cli.py  migration_manager.py
