[build-system]
requires = ["setuptools>=56.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mongo_migrate"
version = "0.1.0"
authors = [
  { name="Rahul George", email="34202955+rahul-george@users.noreply.github.com" },
]
license = { file = "LICENSE" }
description = "Create mongodb schema migrations for your project. Supports migration creation, upgrade and downgrade. Can also use this tool as part of your own script"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]

keywords = ["mongodb", "migration", "mongodb migration", "database", "automation"]
dependencies = ["pymongo", 'tomli; python_version < "3.11"']
requires-python = ">=3.7"

[project.urls]
"Repository" = "https://github.com/blitzcode-io/mongo-migrate"
"Bug Tracker" = "https://github.com/blitzcode-io/mongo-migrate/issues"

[project.scripts]
mongo-migrate = "mongo_migrate.migration_cli:main"

